<resources>
    <string name="app_name">TaroTravel</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_users">Users</string>
    <string name="title_list">List</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="login_title_e_mail">e-mail</string>
    <string name="login_title_password">password</string>
    <string name="sign_up_title_name">name</string>
    <string name="login_btn">Login</string>
    <string name="login_reg_hint">Don\'t Have an Account?Sign up</string>

    <string name="title_gallery_photo">Stockholm</string>

    <string name="description_cover_home">This is homepage cover</string>

    <string name="content_slogan_home">TARO TRAVEL</string>
    <string name="hint_search_bar_home">六大洲、國家或是城市</string>
    <string name="content_hot_item_home">首選行程</string>
    <string name="content_tx_item_home">庭賢精選</string>
    <string name="start_date_btn">When to start</string>
    <string name="end_date_btn">When to end</string>
    <string name="reset_date">Reset</string>
    <!--下拉式排序資料-->
    <string name="price_d">price:descending</string>
    <string name="price_a">price:ascending</string>
    <string name="price_des">高價格優先</string>
    <string name="price_asc">低價格優先</string>
    <!--地區搜尋資料-->
    <string name="place_neas">東北亞</string>
    <string name="place_ncn">中國北部</string>
    <string name="place_scn">中國南部</string>
    <string name="place_seas">東南亞</string>
    <string name="place_sas">南亞</string>
    <string name="place_was">西亞</string>
    <string name="place_na">北美</string>
    <string name="place_weu">西歐</string>
    <string name="place_meu">中歐</string>
    <string name="place_neu">北歐</string>
    <string name="place_eeu">東歐</string>
    <string name="place_seu">南歐</string>
    <string name="place_oc">澳洲</string>
    <string name="place_af">非洲</string>
    <!--    國家列表      -->
    <string name="place_jp">日本</string>
    <string name="place_kr">韓國</string>
    <string name="place_th">泰國</string>
    <string name="place_bru">汶萊</string>
    <string name="place_ma">馬來西亞</string>
    <string name="place_phi">菲律賓</string>
    <string name="place_cam">柬埔寨．吳哥窟．金邊</string>
    <string name="place_mya">緬甸．寮國</string>
    <string name="place_sri">斯里蘭卡</string>
    <string name="place_nep">尼泊爾．不丹</string>
    <string name="place_tur">土耳其</string>
    <string name="place_ira">伊朗．以色列．約旦</string>
    <string name="place_mal">馬爾地夫</string>
    <string name="place_ala">阿拉斯加</string>
    <string name="place_usa">美國</string>
    <string name="place_syd">雪梨</string>
    <string name="place_mel">墨爾本</string>
    <string name="place_swi">瑞士</string>
    <string name="place_aus">奧地利</string>
    <string name="place_fra">法國</string>
    <string name="place_bel">比利時．荷蘭．盧森堡</string>
    <string name="place_gr">希臘</string>
    <string name="place_por">葡萄牙．西班牙</string>
    <string name="place_ska">丹麥．挪威．瑞典．芬蘭</string>
    <string name="place_ice">冰島</string>
    <string name="place_pol">捷克．波蘭．匈牙利</string>
    <string name="place_cro">克羅埃西亞</string>
    <string name="place_rus">俄羅斯</string>
    <string name="place_bal">波羅的海周邊</string>
    <string name="place_egy">埃及</string>
    <string name="place_mad">馬達加斯加．模里西斯</string>
    <!--    地區列表      -->
    <string name="place_jp_shi">四國．中國．高松．廣島．岡山</string>
    <string name="place_jp_kyu">九州．福岡．宮崎．鹿兒島．佐賀</string>
    <string name="place_kr_bus">釜山．慶州．大邱</string>
    <string name="place_kr_je">濟州島</string>
    <string name="place_th_hh">華欣</string>
    <string name="place_th_ks">蘇梅島</string>
    <string name="place_phi_cb">宿霧．薄荷島</string>
    <string name="place_phi_pl">巴拉望</string>
    <string name="place_cn_bj">北京．天津．承德</string>
    <string name="place_cn_sx">山西太原</string>
    <string name="place_cn_jn">江南．上海．杭州．蘇州</string>
    <string name="place_cn_hs">黃山．千島湖</string>
    <string name="place_cn_sd">山東．青島．濟南．煙台．泰山</string>
    <string name="place_cn_cs">長沙．武漢．張家界．長江三峽</string>
    <string name="place_cn_hn">河南．開封．洛陽．少林寺．龍門石窟</string>
    <string name="place_cn_xm">廈門．小三通</string>
    <string name="place_cn_kmzs">港澳珠圳</string>
    <string name="place_cn_sc">四川．重慶．成都．九寨溝</string>
    <string name="place_cn_yn">雲南．昆明．大理．麗江</string>
    <string name="place_cn_gz">貴州．貴陽．黃果樹</string>
    <string name="place_cn_dl">大連．瀋陽．哈爾濱．北韓</string>

    <string name="dont_show_again">下次不再顯示</string>

    <string name="title_activity_scenic_spot">ScenicSpotActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="row_travel_status01">即將成團</string>
    <string name="row_travel_status02">已成團</string>
    <string name="row_travel_status03">已滿團</string>
    <string name="sorting">sorting</string>
    <string name="cancel_btn">取消</string>
    <string name="confirm_btn">確認</string>
    <string name="no_just_no">不要啦</string>
    <string name="total_purchase">總計</string>
    <string name="baby_purchase">嬰兒</string>
    <string name="kid_purchase">孩童</string>
    <string name="adult_purchase">成人</string>
    <string name="title_purchase">旅程標題</string>
    <string name="purchase_tag_label">1</string>
    <string name="revise_btn">修改</string>
    <string name="order_price">單價</string>
    <string name="uid_from_uid">訂單編號</string>
    <string name="orderpicture">orderPicture</string>
    <string name="paragraph">這是內文</string>
    <string name="purchase_notice">訂購前提醒您\n◆ 孩童與嬰兒的條件分別為:\n      返國當天年滿2~15歲、2歲以下
        \n◆ 年滿15歲以成人價計費\n◆ 至少需要一個大人訂單才得成立
        \n◆ 一位嬰兒至少需要一位大人的陪同"\n◆ 孩童享成人價7折、嬰兒則為1折"</string>
    <string name="let_go_btn">出發吧</string>
</resources>
