<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/email_title_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_e_mail"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_up"
        app:layout_constraintStart_toStartOf="@+id/email_sign_up" />

    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/email_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_up" />

    <TextView
        android:id="@+id/password_title_sign-up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_password"
        app:layout_constraintBottom_toTopOf="@+id/password_sign_up"
        app:layout_constraintStart_toStartOf="@+id/password_sign_up" />

    <TextView
        android:id="@+id/title_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_up_title"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="signUpAcc"
        android:text="@string/sign_up_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_sign_up"
        app:layout_constraintStart_toStartOf="@+id/password_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_up" />

    <EditText
        android:id="@+id/name_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/password_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_up" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title_name"
        app:layout_constraintBottom_toTopOf="@+id/name_sign_up"
        app:layout_constraintStart_toStartOf="@+id/name_sign_up" />
</androidx.constraintlayout.widget.ConstraintLayout>